php/sharedcarbackend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sharecarbackendphp
  namespace: bbs
  labels:
    app: sharecarbackendphp
spec:
  ports:
  - port: 9010
    targetPort: 80
    name: http
  clusterIP: None
  selector:
    app: sharecarbackendphp
